<resources>
    <string name="app_name">Nespresso Capsules</string>
    <string name="action_settings">Settings</string>
    <string name="add_capsule">Add New Capsule</string>
    <string name="hint_capsule_brand">Brand</string>
    <string name="hint_capsule_name">Name</string>
    <string name="hint_capsule_intensity">Intensity</string>
    <string name="hint_capsule_barcode">Barcode</string>
    <string name="hint_capsule_rating">Rating</string>
    <string name="hint_capsule_color">Color</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="empty_not_saved">Capsule not saved because error happened.</string>
</resources>
